--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropdown": "^1.9.2",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
